--- a/html/product.html
+++ b/html/product.html
@@ -9,12 +9,13 @@
 	<title>About Us🧑‍🤝‍🧑</title>
 
 	<!-- link to stylesheet -->
-	<link rel="stylesheet" type="text/css" href="../css/style.css">
     <link rel="stylesheet" href="../css/product.css">
+	<link rel="stylesheet" type="text/css" href="../css/style.css">
 
 	<!-- Links to icons  -->
 	<link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<!-- favicon link  -->
 	<link rel="shortcut icon" href="../img/favicon.svg" type="image/x-icon">
@@ -72,7 +73,7 @@
                     <a href="" class="price" ><ion-icon name="heart-outline"></ion-icon></a> 
                     <div>
                         <del>$990.00</del><br>
-                        <span class="price">$749.00</span><br>
+                        <span class="price price-strike">$749.00</span><br>
                         <hr width="800%">
                         <div class="stars">
                         <span class="fa fa-star checked"></span>
@@ -100,7 +101,7 @@
                     <a href="" class="card__icon" ><ion-icon name="heart-outline"></ion-icon></a>
                     <div>
                         <del>$500.00</del><br>
-                        <span class="price">$350.00</span><br>
+                        <span class="price price-strike">$350.00</span><br>
                         <hr width="800%">
                         <span class="fa fa-star checked"></span>
                             <span class="fa fa-star checked"></span>
@@ -127,7 +128,7 @@
                     
                     <div>
                         <del>$800.00</del><br>
-                        <span class="price">$549.00</span><br>
+                        <span class="price price-strike">$549.00</span><br>
                         <hr width="800%">
                         <span class="fa fa-star checked"></span>
                             <span class="fa fa-star checked"></span>
@@ -155,7 +156,7 @@
                     
                     <div>
                         <del>$800.00</del><br>
-                        <span class="price">$679.00</span><br>
+                        <span class="price price-strike">$679.00</span><br>
                         <hr width="800%">
                         <span class="fa fa-star checked"></span>
                             <span class="fa fa-star checked"></span>
@@ -180,7 +181,7 @@
                     <a href="" class="price" ><ion-icon name="heart-outline"></ion-icon></a> 
                     <div>
                         <del>$800.00</del><br>
-                        <span class="price">$549.00</span><br>
+                        <span class="price price-strike">$549.00</span><br>
                         <hr width="800%">
                         <span class="fa fa-star checked"></span>
                             <span class="fa fa-star checked"></span>
@@ -205,7 +206,7 @@
                         <a href="" class="price" ><ion-icon name="heart-outline"></ion-icon></a> 
                         <div>
                             <del>$400.00</del><br>
-                            <span class="price">$349.00</span><br>
+                            <span class="price price-strike">$349.00</span><br>
                             <hr width="800%">
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star checked"></span>
@@ -230,7 +231,7 @@
                         <a href="" class="price" ><ion-icon name="heart-outline"></ion-icon></a> 
                         <div>
                             <del>$200.00</del><br>
-                            <span class="price">$150.00</span><br>
+                            <span class="price price-strike">$150.00</span><br>
                             <hr width="800%">
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star checked"></span>
@@ -255,7 +256,7 @@
                         <a href="" class="price" ><ion-icon name="heart-outline"></ion-icon></a> 
                         <div>
                             <del>$600.00</del><br>
-                            <span class="price">$299.00</span><br>
+                            <span class="price price-strike">$299.00</span><br>
                             <hr width="800%">
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star checked"></span>
@@ -280,7 +281,7 @@
                         <a href="" class="price" ><ion-icon name="heart-outline"></ion-icon></a> 
                         <div>
                             <del>$800.00</del><br>
-                            <span class="price">$600.00</span><br>
+                            <span class="price price-strike">$600.00</span><br>
                             <hr width="800%">
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star checked"></span>
@@ -304,7 +305,7 @@
                         <a href="" class="price" ><ion-icon name="heart-outline"></ion-icon></a> 
                         <div>
                             <del>$890.00</del><br>
-                            <span class="price">$777.00</span><br>
+                            <span class="price price-strike">$777.00</span><br>
                             <hr width="800%">
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star checked"></span>
@@ -329,7 +330,7 @@
                         <a href="" class="price" ><ion-icon name="heart-outline"></ion-icon></a> 
                         <div>
                             <del>$990.00</del><br>
-                            <span class="price">$749.00</span><br>
+                            <span class="price price-strike">$749.00</span><br>
                             <hr width="800%">
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star checked"></span>
@@ -354,7 +355,7 @@
                         <a href="" class="price" ><ion-icon name="heart-outline"></ion-icon></a> 
                         <div>
                             <del>$690.00</del><br>
-                            <span class="price">$349.00</span><br>
+                            <span class="price price-strike">$349.00</span><br>
                             <hr width="800%">
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star checked"></span>
@@ -379,7 +380,7 @@
                         <a href="" class="price" ><ion-icon name="heart-outline"></ion-icon></a> 
                         <div>
                             <del>$990.00</del><br>
-                            <span class="price">$749.00</span><br>
+                            <span class="price price-strike">$749.00</span><br>
                             <hr width="800%">
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star checked"></span>
@@ -404,7 +405,7 @@
                         <a href="" class="price" ><ion-icon name="heart-outline"></ion-icon></a> 
                         <div>
                             <del>$1000.00</del><br>
-                            <span class="price">$747.00</span><br>
+                            <span class="price price-strike">$747.00</span><br>
                             <hr width="800%">
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star-half-full" style="color: orange;"></span>
@@ -429,7 +430,7 @@
                         <a href="" class="price" ><ion-icon name="heart-outline"></ion-icon></a> 
                         <div>
                             <del>$990.00</del><br>
-                            <span class="price">$749.00</span><br>
+                            <span class="price price-strike">$749.00</span><br>
                             <hr width="800%">
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star checked"></span>
@@ -454,7 +455,7 @@
                         <a href="" class="price" ><ion-icon name="heart-outline"></ion-icon></a> 
                         <div>
                             <del>$580.00</del><br>
-                            <span class="price">$448.00</span><br>
+                            <span class="price price-strike">$448.00</span><br>
                             <hr width="800%">
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star checked"></span>
@@ -479,7 +480,7 @@
                         <a href="" class="price" ><ion-icon name="heart-outline"></ion-icon></a> 
                         <div>
                             <del>$690.00</del><br>
-                            <span class="price">$349.00</span><br>
+                            <span class="price price-strike">$349.00</span><br>
                             <hr width="800%">
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star checked"></span>
@@ -504,7 +505,7 @@
                         <a href="" class="price" ><ion-icon name="heart-outline"></ion-icon></a> 
                         <div>
                             <del>$990.00</del><br>
-                            <span class="price">$749.00</span><br>
+                            <span class="price price-strike">$749.00</span><br>
                             <hr width="800%">
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star checked"></span>
@@ -529,7 +530,7 @@
                         <a href="" class="price" ><ion-icon name="heart-outline"></ion-icon></a> 
                         <div>
                             <del>$800.00</del><br>
-                            <span class="price">$500.00</span><br>
+                            <span class="price price-strike">$500.00</span><br>
                             <hr width="800%">
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star checked"></span>
@@ -554,7 +555,7 @@
                         <a href="" class="price" ><ion-icon name="heart-outline"></ion-icon></a> 
                         <div>
                             <del>$500.00</del><br>
-                            <span class="price">$250.00</span><br>
+                            <span class="price price-strike">$250.00</span><br>
                             <hr width="800%">
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star checked"></span>
