--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="description" content="Plant Store: Plant Store: Bringing the beauty of bonsai to your home">
 	<meta name="keywords" content="HTML, CSS, JavaScript">
-	<meta name="author" content="Hem Pun, Manish Damala, Partikshya Gurung , Diya Thapa">
+	<meta name="author" content="Hem Pun, Manish Damala, Partikshya Magar , Diya Thapa">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Plant Store: Bringing the beauty of bonsai to your home</title>
 
@@ -17,9 +17,6 @@
 
 	<!-- favicon link  -->
 	<link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon">
-
-  	<!-- Link to google fonts  -->
-  	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
 </head>
 <body>
