--- a/html/about.html
+++ b/html/about.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
   <meta name="description" content="Plant Store: Plant Store: Bringing the beauty of bonsai to your home">
   <meta name="keywords" content="HTML, CSS, JavaScript">
-  <meta name="author" content="Hem Pun, Manish Damala, Partikshya Gurung , Diya Thapa">
+  <meta name="author" content="Hem Pun, Manish Damala, Partikshya Magar , Diya Thapa">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>About Us🧑‍🤝‍🧑</title>
 
