--- a/html/blog.html
+++ b/html/blog.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
   <meta name="description" content="Blog of plant store">
   <meta name="keywords" content="HTML, CSS, JavaScript">
-  <meta name="author" content="Hem Pun, Manish Damala, Partikshya Gurung , Diya Thapa">
+  <meta name="author" content="Hem Pun, Manish Damala, Partikshya Magar , Diya Thapa">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Blog 📑</title>
 
